# python-homewizard-energy

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  example.py  example.py_  pyproject.toml  pytest.ini
.github/: dependabot-auto-approve.yml  dependabot.yml  release-drafter.yml
.github/workflows/: codeql.yaml  dependabot-auto-merge.yml  linting.yaml  release-drafter.yaml  release.yaml  requirements.txt  tests.yaml
homewizard_energy/: __init__.py  brand.py  const.py  errors.py  features.py  homewizard_energy.py  models.py  utils.py
homewizard_energy/v1/: __init__.py  brand.py  const.py  models.py
homewizard_energy/v2/: __init__.py  cacert.py  const.py  models.py  websocket.py
tests/: __init__.py  test_brand.py  test_helpers.py  test_homewizard_energy.py  test_models.py
tests/__snapshots__/: test_brand.ambr  test_homewizard_energy.ambr  test_models.ambr
tests/fixtures/: data_kwh_single_phase.json  data_kwh_three_phase.json  data_p1_full.json  data_p1_single_phase.json  data_watermeter.json  device_extra_parameters.json  device_invalid_api.json  state.json  state_switch_lock_and_brightness.json  system_cloud_disabled.json
tests/fixtures/HWE-KWH1/: data.json  device.json
tests/fixtures/HWE-KWH3/: data.json  device.json
tests/fixtures/HWE-P1/: data_no_gas.json  decryption.json
tests/fixtures/HWE-SKT/: device.json  state_brightness.json
tests/fixtures/SDM630-wifi/: device.json
tests/v1/: test_v1_combined_models.py  test_v1_device.py  test_v1_homewizard_energy.py  test_v1_measurement.py  test_v1_models.py  test_v1_state.py  test_v1_system.py
tests/v1/__snapshots__/: test_models.ambr  test_v1_brand.ambr  test_v1_combined_models.ambr  test_v1_device.ambr  test_v1_homewizard_energy.ambr  test_v1_measurement.ambr  test_v1_models.ambr  test_v1_state.ambr  test_v1_system.ambr
tests/v1/fixtures/HWE-BAT/: measurement.json
tests/v1/fixtures/HWE-KWH1/: measurement.json
tests/v1/fixtures/HWE-KWH3/: measurement.json
tests/v1/fixtures/HWE-P1/: data.json  data_invalid_external_ean.json  data_minimal.json  measurement_1_phase_no_gas.json  measurement_3_phase_with_gas_with_watermeter.json  system.json  telegram.txt
tests/v1/fixtures/HWE-SKT/: data.json  state_all.json  state_power_on.json  state_switch_lock.json
tests/v1/fixtures/HWE-WTR/: data.json  device.json  identify.json
tests/v1/fixtures/SDM230-wifi/: device.json
tests/v1/fixtures/exceptions/: data_invalid_external_data.json  data_invalid_external_ean.json
tests/v2/: test_v2_batteries.py  test_v2_device.py  test_v2_homewizard_energy.py  test_v2_measurement.py  test_v2_models.py  test_v2_system.py  test_v2_websocket.py
tests/v2/__snapshots__/: test_v2_batteries.ambr  test_v2_device.ambr  test_v2_homewizard_energy.ambr  test_v2_measurement.ambr  test_v2_models.ambr  test_v2_system.ambr
tests/v2/fixtures/HWE-BAT/: device.json  system.json
tests/v2/fixtures/HWE-KWH1/: device.json
tests/v2/fixtures/HWE-KWH3/: batteries.json  device.json
tests/v2/fixtures/HWE-P1/: batteries.json  batteries_2_3_0.json  device.json  measurement_invalid_ean.json  measurement_invalid_external.json  system.json
