[tool.poetry]
name = "python-homewizard-energy"
version = "0.0.0"
description = "Asynchronous Python client for the HomeWizard Energy"
authors = ["DCSBL"]
maintainers = ["DCSBL"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/homewizard/python-homewizard-energy"
repository = "https://github.com/homewizard/python-homewizard-energy"
documentation = "https://github.com/homewizard/python-homewizard-energy"
classifiers = [
]
packages = [
    { include = "homewizard_energy" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = ">=3.0.0"
async-timeout = "^4.0.3"
multidict = "^6.0.5" ## To fix aiohttp dependency at python 3.12
backoff = "^2.2.1"
strenum = "^0.4.15"

[tool.poetry.dev-dependencies]
aresponses = "^3.0.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.7.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
pre-commit-hooks = "^4.6.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
yamllint = "^1.35.1"
pyupgrade = "^3.19.0"
flake8-simplify = "^0.21.0"
vulture = "^2.13"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-eradicate = "^1.2.1"
flake8-markdown = "^0.3.0"
ruff = "0.7.1"
darglint = "^1.8.1"
safety = "^3.2.10"
codespell = "^2.3.0"
bandit = "^1.7.9"
syrupy = "^4.7.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/homewizard/python-homewizard-energy/issues"
Changelog = "https://github.com/homewizard/python-homewizard-energy/releases"

[tool.coverage.paths]
source = ["homewizard_energy"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["homewizard_energy"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
    "too-many-instance-attributes",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=120

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["homewizard_energy"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
